--- a/src/package.json
+++ b/src/package.json
@@ -36,7 +36,11 @@
     "grunt-contrib-clean": "~0.5.0",
     "connect-livereload": "~0.3.0",
     "grunt-open": "~0.2.2",
-    "grunt-contrib-jasmine": "~0.5.2"
+    "grunt-contrib-jasmine": "~0.5.2",
+    "cheerio": "~0.12.2",
+    "optimist": "~0.6.0",
+    "underscore": "~1.5.2",
+    "lazy": "~1.0.11"
   },
   "peerDependencies": {
     "grunt": "~0.4.0"
